--- a/notebooks/minimal_example.ipynb
+++ b/notebooks/minimal_example.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -33,14 +33,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Cloning into 'accelerated_features'...\n",
-            "remote: Enumerating objects: 27, done.\u001b[K\n",
-            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Total 27 (delta 0), reused 5 (delta 0), pack-reused 16\u001b[K\n",
-            "Receiving objects: 100% (27/27), 13.29 MiB | 23.03 MiB/s, done.\n",
-            "Resolving deltas: 100% (1/1), done.\n",
-            "/content/accelerated_features\n"
+            "zsh:cd:1: no such file or directory: /content\n",
+            "[Errno 2] No such file or directory: '/content/accelerated_features'\n",
+            "/Users/aarijimam/Work/Grayhat/accelerated_features/notebooks\n"
           ]
         }
       ],
@@ -60,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,7 +71,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodules\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mxfeat\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XFeat\n\u001b[1;32m      8\u001b[0m xfeat \u001b[38;5;241m=\u001b[39m XFeat()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#Random input\u001b[39;00m\n",
+            "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodules\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mxfeat\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m XFeat\n\u001b[1;32m      8\u001b[0m xfeat \u001b[38;5;241m=\u001b[39m XFeat()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#Random input\u001b[39;00m\n",
             "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'modules'"
           ]
         }
