--- a/tf_matching.ipynb
+++ b/tf_matching.ipynb
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,41 +1307,86 @@
     "\t\treturn out1['keypoints'][idxs0].cpu().numpy(), out2['keypoints'][idxs1].cpu().numpy()\n",
     "\n",
     "\n",
-    "\tdef preprocess_tensor(self, x):\n",
-    "\t\t\"\"\" Guarantee that image is divisible by 32 to avoid aliasing artifacts. \"\"\"\n",
+    "\timport numpy as np\n",
+    "\n",
+    "\tdef parse_input(self, x):\n",
+    "\t\t\"\"\" Guarantee that the image is divisible by 32 to avoid aliasing artifacts. \"\"\"\n",
     "\t\tif isinstance(x, np.ndarray) and len(x.shape) == 3:\n",
-    "\t\t\tx = torch.tensor(x).permute(2,0,1)[None]\n",
-    "\t\tx = x.to(self.dev).float()\n",
+    "\t\t\t# Transpose to (channels, height, width) and add a batch dimension (None)\n",
+    "\t\t\tx = np.transpose(x, (2, 0, 1))[None, ...]\n",
     "\n",
+    "\t\t# Get the height and width from the last two dimensions\n",
     "\t\tH, W = x.shape[-2:]\n",
-    "\t\t_H, _W = (H//32) * 32, (W//32) * 32\n",
-    "\t\trh, rw = H/_H, W/_W\n",
+    "\t\t_H, _W = (H // 32) * 32, (W // 32) * 32\n",
+    "\t\trh, rw = H / _H, W / _W\n",
     "\n",
-    "\t\tx = F.interpolate(x, (_H, _W), mode='bilinear', align_corners=False)\n",
+    "\t\t# Resize the image using bilinear interpolation\n",
+    "\t\tx = self.bilinear_interpolation(x, (_H, _W))\n",
+    "\n",
     "\t\treturn x, rh, rw\n",
     "\n",
-    "\tdef get_kpts_heatmap(self, kpts, softmax_temp = 1.0):\n",
-    "\t\tscores = F.softmax(kpts*softmax_temp, 1)[:, :64]\n",
+    "\tdef bilinear_interpolation(self, x, size):\n",
+    "\t\t\"\"\" Perform bilinear interpolation to resize the image. \"\"\"\n",
+    "\t\timport cv2  # Using OpenCV for bilinear interpolation\n",
+    "\n",
+    "\t\tresized_images = []\n",
+    "\t\tfor img in x:\n",
+    "\t\t\t# Transpose back to (height, width, channels) for resizing in cv2\n",
+    "\t\t\timg = np.transpose(img, (1, 2, 0))\n",
+    "\t\t\tresized_img = cv2.resize(img, size, interpolation=cv2.INTER_LINEAR)\n",
+    "\t\t\t# Transpose back to (channels, height, width) after resizing\n",
+    "\t\t\tresized_img = np.transpose(resized_img, (2, 0, 1))\n",
+    "\t\t\tresized_images.append(resized_img)\n",
+    "\n",
+    "\t\t# Stack back the resized images along the batch dimension\n",
+    "\t\treturn np.stack(resized_images, axis=0)\n",
+    "\n",
+    "\tdef get_kpts_heatmap(self, kpts, softmax_temp=1.0):\n",
+    "\t\t# Compute softmax along the correct axis (axis=1 as in PyTorch)\n",
+    "\t\texp_kpts = np.exp(kpts * softmax_temp)\n",
+    "\t\tscores = exp_kpts / np.sum(exp_kpts, axis=1, keepdims=True)\n",
+    "\n",
+    "\t\t# Take the first 64 scores along axis 1\n",
+    "\t\tscores = scores[:, :64]\n",
+    "\n",
     "\t\tB, _, H, W = scores.shape\n",
-    "\t\theatmap = scores.permute(0, 2, 3, 1).reshape(B, H, W, 8, 8)\n",
-    "\t\theatmap = heatmap.permute(0, 1, 3, 2, 4).reshape(B, 1, H*8, W*8)\n",
+    "\t\t\n",
+    "\t\t# Reshape and permute as needed\n",
+    "\t\theatmap = np.transpose(scores, (0, 2, 3, 1))  # Permute (0, 2, 3, 1)\n",
+    "\t\theatmap = heatmap.reshape(B, H, W, 8, 8)      # Reshape to (B, H, W, 8, 8)\n",
+    "\t\theatmap = np.transpose(heatmap, (0, 1, 3, 2, 4))  # Permute (0, 1, 3, 2, 4)\n",
+    "\t\theatmap = heatmap.reshape(B, 1, H * 8, W * 8)     # Reshape to (B, 1, H*8, W*8)\n",
+    "\n",
     "\t\treturn heatmap\n",
     "\n",
-    "\tdef NMS(self, x, threshold = 0.05, kernel_size = 5):\n",
+    "\n",
+    "\timport scipy.ndimage as ndimage\n",
+    "\n",
+    "\tdef NMS(self, x, threshold=0.05, kernel_size=5):\n",
     "\t\tB, _, H, W = x.shape\n",
-    "\t\tpad=kernel_size//2\n",
-    "\t\tlocal_max = nn.MaxPool2d(kernel_size=kernel_size, stride=1, padding=pad)(x)\n",
+    "\t\tpad = kernel_size // 2\n",
+    "\n",
+    "\t\t# Apply max pooling using maximum_filter from scipy.ndimage\n",
+    "\t\tlocal_max = np.zeros_like(x)\n",
+    "\t\tfor b in range(B):\n",
+    "\t\t\tlocal_max[b] = ndimage.maximum_filter(x[b], size=(1, kernel_size, kernel_size), mode='constant', cval=0)\n",
+    "\n",
+    "\t\t# Find positions where x equals local max and is greater than threshold\n",
     "\t\tpos = (x == local_max) & (x > threshold)\n",
-    "\t\tpos_batched = [k.nonzero()[..., 1:].flip(-1) for k in pos]\n",
     "\n",
-    "\t\tpad_val = max([len(x) for x in pos_batched])\n",
-    "\t\tpos = torch.zeros((B, pad_val, 2), dtype=torch.long, device=x.device)\n",
+    "\t\t# Collect the positions for each batch\n",
+    "\t\tpos_batched = [np.stack(np.nonzero(p), axis=-1)[..., 1:] for p in pos]\n",
     "\n",
-    "\t\t#Pad kpts and build (B, N, 2) tensor\n",
+    "\t\t# Pad the results with zeros to ensure all arrays are the same size\n",
+    "\t\tpad_val = max([len(p) for p in pos_batched])\n",
+    "\t\tpadded_pos = np.zeros((B, pad_val, 2), dtype=np.int64)\n",
+    "\n",
+    "\t\t# Pad keypoints and build (B, N, 2) tensor\n",
     "\t\tfor b in range(len(pos_batched)):\n",
-    "\t\t\tpos[b, :len(pos_batched[b]), :] = pos_batched[b]\n",
+    "\t\t\tpadded_pos[b, :len(pos_batched[b]), :] = pos_batched[b]\n",
     "\n",
-    "\t\treturn pos\n",
+    "\t\treturn padded_pos\n",
+    "\n",
     "\n",
     "\n",
     "\t@torch.inference_mode()\n",
